# ai_profiler

./: CMakeLists.txt  Readme.md  build.cmd  build.ps1
qml/: HotspotsPage.qml  Main.qml  OverviewPage.qml  qml.qrc
qml/components/: Card.qml  TimelineGraph.qml
src/: aggregator.cpp  aggregator.h  countersampler.cpp  countersampler.h  cpusampler.cpp  cpusampler.h  main.cpp  profilercontroller.cpp  profilercontroller.h
src/common/: datamodels.h
src/models/: hotspotmodel.cpp  hotspotmodel.h  timelinemodel.cpp  timelinemodel.h
